--- a/Proyectos Advanced Analytics/The Nuts and Bolts of Machine Learning(6-7)/readme
+++ b/Proyectos Advanced Analytics/The Nuts and Bolts of Machine Learning(6-7)/readme
@@ -1,46 +1,45 @@
 Machine Learning Models and Feature Engineering
-Este repositorio contiene una serie de notebooks que cubren técnicas de ingeniería de características y la implementación de varios modelos de machine learning. A continuación, se detalla el contenido de cada notebook en orden de ejecución.
+This repository contains a series of notebooks covering feature engineering techniques and the implementation of various machine learning models. Below is a detailed description of each notebook in execution order.
 
 1. Perform Feature Engineering
-Este notebook cubre técnicas de ingeniería de características esenciales para la preparación de datos antes de entrenar modelos de machine learning. Se incluyen:
+This notebook covers essential feature engineering techniques for data preparation before training machine learning models. It includes:
 
-Manejo de valores nulos y outliers.
-Transformaciones de variables categóricas.
-Creación de nuevas características a partir de datos existentes.
-Escalado y normalización de variables numéricas.
+Handling missing values and outliers.
+Transformations of categorical variables.
+Creating new features from existing data.
+Scaling and normalizing numerical variables.
 2. Build a Naive Bayes Model
-Implementación de un modelo de clasificación basado en Naive Bayes. Contiene:
+Implementation of a classification model based on Naive Bayes. It includes:
 
-Explicación teórica del algoritmo.
-Preprocesamiento de datos y división en conjuntos de entrenamiento y prueba.
-Implementación del modelo usando sklearn.naive_bayes.
-Evaluación del modelo con métricas como precisión, recall y matriz de confusión.
+Theoretical explanation of the algorithm.
+Data preprocessing and splitting into training and testing sets.
+Model implementation using sklearn.naive_bayes.
+Model evaluation with metrics such as precision, recall, and confusion matrix.
 3. Build a K-means Model
-Implementación del algoritmo de clustering K-means. Incluye:
+Implementation of the K-means clustering algorithm. It includes:
 
-Explicación del algoritmo y su aplicación.
-Uso de la técnica del codo para determinar el número óptimo de clusters.
-Entrenamiento del modelo con sklearn.cluster.KMeans.
-Visualización de los clusters en el espacio de características.
+Explanation of the algorithm and its application.
+Using the elbow method to determine the optimal number of clusters.
+Training the model with sklearn.cluster.KMeans.
+Visualization of clusters in the feature space.
 4. Build a Decision Tree Model
-Implementación de un árbol de decisión para clasificación. Contiene:
+Implementation of a decision tree for classification. It includes:
 
-Explicación teórica del algoritmo.
-Entrenamiento del modelo con sklearn.tree.DecisionTreeClassifier.
-Ajuste de hiperparámetros para evitar el sobreajuste.
-Evaluación del modelo con precisión y matriz de confusión.
+Theoretical explanation of the algorithm.
+Training the model with sklearn.tree.DecisionTreeClassifier.
+Hyperparameter tuning to prevent overfitting.
+Model evaluation using accuracy and confusion matrix.
 5. Build a Random Forest Model
-Implementación de un modelo de Random Forest para clasificación. Incluye:
+Implementation of a Random Forest model for classification. It includes:
 
-Comparación con árboles de decisión individuales.
-Entrenamiento con sklearn.ensemble.RandomForestClassifier.
-Ajuste de hiperparámetros con validación cruzada.
-Evaluación del modelo con métricas de desempeño.
+Comparison with individual decision trees.
+Training with sklearn.ensemble.RandomForestClassifier.
+Hyperparameter tuning with cross-validation.
+Model evaluation using performance metrics.
 6. Build an XGBoost Model
-Implementación del modelo XGBoost para clasificación o regresión. Contiene:
+Implementation of the XGBoost model for classification or regression. It includes:
 
-Explicación del algoritmo y sus ventajas sobre otros modelos.
-Implementación con xgboost.XGBClassifier.
-Ajuste de hiperparámetros mediante búsqueda en grid.
-Evaluación del modelo y comparación con otros enfoques.
-Cada notebook proporciona ejemplos prácticos con código y visualizaciones para facilitar la comprensión de los conceptos y la implementación de los modelos.
+Explanation of the algorithm and its advantages over other models.
+Implementation using xgboost.XGBClassifier.
+Hyperparameter tuning through grid search.
+Model evaluation and comparison with other approaches.
